--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -67,25 +67,23 @@
                                 <!-- 댓글 날짜 -->
                                 <div class="comment-written-at"><span class="date-time">날짜</span></div>
                                 <!-- 댓글쓰기, 수정, 삭제 : 지금 로그인 유저정보가 있으면 수정, 삭제 보이게하고 아니면 댓글쓰기만 해주세요 -->
-                                <div class="comment-option-button">
-                                    <a>댓글 쓰기</a>
-                                </div>
+                                <div class="comment-option-button"><a>···</a></div>
                             </div>
                         </li>
                         <li class="up-content" th:each="boardComment :${boardCommentList}" th:id="bc+${boardComment.getCno()}">
                             <div class="comment-info clear">
                                 <!-- 댓글작성 닉네임 -->
-                                <div class="comment-nick"><span class="comment-writer" th:text="${boardComment.getNickname()}"></span></div>
+                                <div class="comment-nick" id="divCommentWriter"><span class="comment-writer" id="spanCommentWriter" th:text="${boardComment.getNickname()}"></span></div>
                                 <!-- 댓글 내용 -->
-                                <div class="comment-content clear" th:if="${boardComment.getCheck_delete()} == 'F'" ><p th:text="${boardComment.getContent()}"></p></div>
+                                <div class="comment-content clear" th:if="${boardComment.getCheck_delete()} == 'F'"><p th:text="${boardComment.getContent()}" style="white-space:pre-line;"></p></div>
                                 <div class="comment-content clear" th:unless="${boardComment.getCheck_delete()} == 'F'"><p>삭제된 댓글입니다</p></div>
                                 <!-- 댓글 날짜 -->
                                 <div class="comment-written-at"><span class="date-time" th:text="${boardComment.getRegister_date()}"></span></div>
                                 <!-- 댓글쓰기, 수정, 삭제 : 지금 로그인 유저정보가 있으면 수정, 삭제 보이게하고 아니면 댓글쓰기만 해주세요 -->
                                 <div class="comment-option-button" th:if="${studentInfo} != null and ${boardComment.getCheck_delete()} == 'F'">
-                                    <a>댓글 쓰기</a>
-                                    <a th:if="${studentInfo.getSid()} == ${boardComment.getStudentForeignkey().getSid()}">수정</a>
-                                    <a th:if="${studentInfo.getSid()} == ${boardComment.getStudentForeignkey().getSid()}">삭제</a>
+                                    <a style="cursor:pointer" th:if="${studentInfo} != null" th:onClick="|showCommentByCommentForm(${boardComment.getCno()});|">댓글 쓰기</a>
+                                    <a style="cursor:pointer" th:if="${studentInfo.getSid()} == ${boardComment.getStudentForeignkey().getSid()}" th:onClick="|showUpdateCommentForm(${boardComment.getCno()});|">수정</a>
+                                    <a style="cursor:pointer" th:if="${studentInfo.getSid()} == ${boardComment.getStudentForeignkey().getSid()}" th:onClick="|return deleteComment(${boardComment.getCno()});|">삭제</a>
                                 </div>
                             </div>
                         </li>
@@ -94,32 +92,32 @@
             </div>
          <br>
             
-         <nav aria-label="Page navigation">
+         <nav aria-label="Page navigation" th:if="${boardCommentList.getTotalPages()} != 0">
             <ul class="pagination justify-content-center">
         		<li id="pagefirst">
             		<a href="?page=0">
-                		<span>«</span>
+                		<span class="page-link">«</span>
             		</a>
         		</li>
         		<li style="cursor:pointer" id="pagePrev">
             		<a th:onClick="|return pageMove('prev');|">
-                		<span>＜</span>
+                		<span class="page-link">&lt;</span>
             		</a>
         		</li>
         		<li style="cursor:pointer" th:if="${boardCommentList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,boardCommentList.getTotalPages()-1)}">
-            		<a th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
+            		<a class="page-link" th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
         		</li>
         		<li id="pageNext">
             		<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
-                		<span>></span>
+                		<span class="page-link">&gt;</span>
             		</a>
         		</li>
         		<li>
            			<a th:if="${boardCommentList.getTotalPages()}>0" th:href="'?'+page+'='+${boardCommentList.getTotalPages()-1}">
-                		<span>»</span>
+                		<span class="page-link">»</span>
             		</a>
             		<a th:if="${boardCommentList.getTotalPages()}==0" th:href="'?'+page+'='+${boardCommentList.getTotalPages()}">
-                		<span>»</span>
+                		<span class="page-link">»</span>
             		</a>
         		</li>
     		</ul>
@@ -130,12 +128,16 @@
                 <div class="comment-write-form">
                     <!-- 댓글 입력폼 -->
                     <div class="comment-write">
-                        <textarea maxlength="400" placeholder="댓글을 입력하세요."></textarea>
+                        <textarea id="cTextArea" maxlength="200" placeholder="댓글을 입력하세요"></textarea>
                     </div>
                     <!-- 댓글 입력버튼 -->
                     <div class="comment-button clear">
-                        <div class="fr">
-                            <button type="button" class="btn-blue">등록</button>
+                        <div style="float:right;">
+                        	<button id="commentCancel" type="button" class="btn-blue" style="display:none" onClick="cancelCommentForm('');">취소</button>
+                          	<button id="commentRegisterButton" type="button" class="btn-blue" onClick="return registerComment('');">등록</button>
+                        </div>
+                        <div class="fl">
+                        	<div><b id="toComment"></b></div>
                         </div>
                     </div>
                 </div>
@@ -144,12 +146,6 @@
             <div class="bottom-button-wrap clear">
                 <div class="fl">
                     <button type="button" class="btn-blue" onClick="history.go(-1)">목록</button>
-                </div>
-                <div class="fr">
-                    <!--수정-->
-                    <button type="button" class="btn-grey">수정</button>
-                    <button type="button" class="btn-grey">삭제</button>
-                    <button type="button" class="btn-blue">글쓰기</button>
                 </div>
             </div>
 </th:block>
@@ -180,6 +176,7 @@
                 results = regex.exec(location.search);
             return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         }
+        
         function pageMove(param) {
             var boardNumber = document.getElementsByName("boardNumber")[0].id;
             var pageNum = parseInt(getParameterByName("page"));
@@ -193,6 +190,7 @@
             location.href = "/yu/board/boardView/" + boardNumber + "?page=" + (pageNum + nextOrPrev);
             return true;
         }
+        
         function deleteBoard(bno) {
             if(confirm("게시글을 삭제하시겠습니까?")) {
                 $.ajax({
@@ -216,28 +214,25 @@
             }
             else return false;
         }
+        
         function cancelCommentForm(part) {
-            document.getElementById(part + "commentForm").style.display = "none";
-            document.getElementById(part + "cTextArea").value = "";
+        	$("#cTextArea").val("");
+    		$("#cTextArea").attr("placeholder", "댓글을 입력하세요");
+            $("#commentCancel").css("display", "none");
+            
+        	if(part == "u") {
+        		$("#commentRegisterButton").html("등록");
+        	}
+        	if($("#toComment").html() != "") $("#toComment").html("");
         }
 
         function registerComment(part) {
             var boardNumber = document.getElementsByName("boardNumber")[0].id;
-            var sid = $("#" + part + "csid");
-            var nickname = $("#" + part + "cnickname");
-            var content = $("#" + part + "cTextArea");
+            var sid = "[[${studentInfo.getSid()}]]";
+            var nickname = "[[${studentInfo.getNickname()}]]";
+            var content = $("#cTextArea");
             var ccno;
 
-            if(sid.val() == "") {
-                alert("학번 입력");
-                sid.focus();
-                return false;
-            }
-            if(nickname.val() == "") {
-                alert("닉네임 입력");
-                nickname.focus();
-                return false;
-            }
             if(content.val() == "") {
                 alert("내용 입력");
                 content.focus();
@@ -252,8 +247,8 @@
                 data : {
                     bno : boardNumber,
                     ccno : ccno,
-                    sid : sid.val(),
-                    nickname : nickname.val(),
+                    sid : sid,
+                    nickname : nickname,
                     content : content.val(),
                 },
                 success : function(data){
@@ -270,6 +265,7 @@
                 }
             });
         }
+        
         function deleteComment(cno) {
             if(confirm("선택된 댓글을 삭제하시겠습니까?")) {
                 var boardNumber = document.getElementsByName("boardNumber")[0].id;
@@ -295,44 +291,35 @@
             }
             else return false;
         }
+        
         function showCommentByCommentForm(cno) {
             clickCommentCno = cno;
-            document.getElementById("ccommentForm").style.display = "block";
+            var liId = "bc" + cno;
+            var toNick = $("#"+ liId +" #divCommentWriter #spanCommentWriter").text();
+            
+            $("#toComment").html("To. " + toNick);
+            $("#cTextArea").attr("placeholder", "대댓글을 입력하세요");
+            $("#commentRegisterButton").attr("onClick", "return registerComment('c');");
+            $("#commentCancel").css("display", "inline-block");
         }
+        
         function showUpdateCommentForm(cno) {
-            var selectTr = $("#bc" + cno);
-            var selectTd = selectTr.children();
-
-            clickCommentCno = cno;
-            document.getElementById("light").style.display = "block";
-            document.getElementById("fade").style.display = "block";
-            document.getElementById("beforeCommentTextArea").value =
-                (selectTd.eq(0).text() == "") ? selectTd.eq(4).text() : selectTd.eq(3).text();
-            document.getElementById("mcommentForm").style.display = "block";
-        }
-
-        function cancelUpdateCommentForm() {
-            document.getElementById("light").style.display = "none";
-            document.getElementById("fade").style.display = "none";
-            cancelCommentForm("m");
+        	clickCommentCno = cno;
+        	
+        	if($("#toComment").html() != "") $("#toComment").html("");
+            $("#cTextArea").attr("placeholder", "수정될 댓글을 입력하세요");
+            $("#commentRegisterButton").html("수정");
+            $("#commentRegisterButton").attr("onClick", "return updateComment('" + cno + "')");
+            $("#commentCancel").attr("onClick", "cancelCommentForm('u');");
+            $("#commentCancel").css("display", "inline-block");
         }
 
         function updateComment(cno) {
             var boardNumber = document.getElementsByName("boardNumber")[0].id;
-            var sid = $("#ucsid");
-            var nickname = $("#ucnickname");
-            var content = $("#ucTextArea");
+            var sid = "[[${studentInfo.getSid()}]]";
+            var nickname = "[[${studentInfo.getNickname()}]]";
+            var content = $("#cTextArea");
 
-            if(sid.val() == "") {
-                alert("학번 입력");
-                sid.focus();
-                return false;
-            }
-            if(nickname.val() == "") {
-                alert("닉네임 입력");
-                nickname.focus();
-                return false;
-            }
             if(content.val() == "") {
                 alert("내용 입력");
                 content.focus();
