--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -10641,7 +10641,7 @@ footer > div > div > a, footer > div > div {
   border: transparent;
 }
 
-.like-btn, declare-btn {
+.like-btn, .declare-btn {
   padding: 0;
   width: 25px;
   height: 25px;
@@ -10702,6 +10702,8 @@ footer > div > div > a, footer > div > div {
   width: 10%;
   margin-right : 33px;
   margin-top : 3px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .comment-writer {
@@ -10905,6 +10907,18 @@ textarea {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.reply-info-wrap {
+  padding: 9px 3px 7px 3px;
+  position: relative;
+  background-color: #f0f0f0 ;
+  font-size: 15px;
+}
+
+.reply-img {
+  float: left;
+  margin: 0 3px;
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
