--- a/src/main/resources/templates/studentInfo/studentInfo.html
+++ b/src/main/resources/templates/studentInfo/studentInfo.html
@@ -107,31 +107,15 @@
                       <thead>
                         <tr>
                           <th>제목</th>
-                          <th>위치</th>
                           <th>작성일</th>
+                          <th>위치</th>
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td>ㅁㄴㅇㄹ</td>
-                          <td>이성욱</td>
-                          <td>9.15 22:55</td>
-                        </tr>
-                        <tr>
-                          <td>ㅁㄴㅇㄹ</td>
-                          <td>이성욱</td>
-                          <td>9.15 22:55</td>
-                        </tr>
-                        <tr>
-                          <td>ㅁㄴㅇㄹ</td>
-                          <td>이성욱</td>
-                          <td>9.15 22:55</td>
-                        </tr>
-                        <tr>
-                          <td>ㅁㄴㅇㄹ</td>
-                          <td>이성욱</td>
-                          <td>9.15 22:55</td>
-                        </tr>
+                        <tr th:each="board :${myBoardList}" th:if="${board.getCheck_delete()} != 'T'">
+                          <td><a th:href="@{'/yu/board/boardView/'+${board.getBno()}}" th:text="${board.getTitle()}"></a></td>
+                          <td th:text="${board.getRegister_date()}"></td>
+                          <td th:text="${board.getBoardtype()}"></td>
                       </tbody>
                     </table>
                   </div>
