--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="title">
-	<title>YU BoardView</title>
+	<title>YU Board View</title>
 </th:block>
 
 <th:block layout:fragment="article">
@@ -153,7 +153,7 @@
                     </div>
                     <!-- 댓글 입력버튼 -->
                     <div class="comment-button clear">
-                        <div style="float:right;">
+                        <div class="fr;">
                         	<button id="commentCancel" type="button" class="btn-blue" style="display:none" onClick="cancelCommentForm('');">취소</button>
                           	<button id="commentRegisterButton" type="button" class="btn-blue" onClick="return registerComment('');">등록</button>
                         </div>
@@ -167,6 +167,10 @@
             <div class="bottom-button-wrap clear">
                 <div class="fl">
                     <button type="button" class="btn-blue" onClick="history.go(-1)">목록</button>
+                </div>
+                <div class="fr">         	
+                	<button type="button" class="btn-grey" th:if="${studentInfo.getSid()} == ${board.getSid()}" onClick="updateButtonClick()">수정</button>
+                    <button type="button" class="btn-grey" th:if="${studentInfo.getSid()} == ${board.getSid()}" th:onClick="|return deleteBoard(${board.getBno()});|">삭제</button>
                 </div>
             </div>
 </th:block>
@@ -216,7 +220,7 @@
             if(confirm("게시글을 삭제하시겠습니까?")) {
                 $.ajax({
                     type: "PUT",
-                    url : "/board/deleteBoard",
+                    url : "/yu/deleteBoard",
                     data : {
                         bno : bno
                     },
@@ -419,6 +423,10 @@
             return true;
         }
         
+        function updateButtonClick() {
+        	location.href = "/yu/board/boardUpdate/" + [[${board.getBno()}]];
+        }
+
         function showCommentToCommentNickname() {
         	
         }
