--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -61,13 +61,13 @@
                         <li class="up-content">
                             <div class="comment-info clear">
                                 <!-- 댓글작성 닉네임 -->
-                                <div class="comment-nick"><span class="comment-writer">닉네임</span></div>
+                                <div class="comment-nick"><span class="comment-writer" style="font-weight:bold">닉네임</span></div>
                                 <!-- 댓글 내용 -->
-                                <div class="comment-content clear"><p>내용</p></div>
+                                <div class="comment-content clear" ><p style="font-weight:bold">내용</p></div>
                                 <!-- 댓글 날짜 -->
-                                <div class="comment-written-at"><span class="date-time">날짜</span></div>
+                                <div class="comment-written-at"><span class="date-time" style="font-weight:bold">날짜</span></div>
                                 <!-- 댓글쓰기, 수정, 삭제 : 지금 로그인 유저정보가 있으면 수정, 삭제 보이게하고 아니면 댓글쓰기만 해주세요 -->
-                                <div class="comment-option-button"><a>···</a></div>
+                                <div class="comment-option-button"><a style="font-weight:bold">···</a></div>
                             </div>
                         </li>
                         <li class="up-content" th:each="boardComment :${boardCommentList}" th:id="bc+${boardComment.getCno()}">
@@ -96,7 +96,9 @@
                                 </div>
                                 <!-- 댓글 내용 -->
                                 <div class="comment-content clear" th:if="${boardComment.getCheck_delete()} == 'F'">
-                                <p th:id="bc+${boardComment.getCno()}" th:text="${boardComment.getContent()}" style="white-space:pre-line;"></p></div>
+                                	<p th:id="bc+${boardComment.getCno()}" style="white-space:pre-line;"><b style="font-size:10pt">[To. [[${boardComment.getTonickname()}]]]</b><br>[[${boardComment.getContent()}]]
+                                	</p>
+                                </div>
                                 <div class="comment-content clear" th:unless="${boardComment.getCheck_delete()} == 'F'"><p>삭제된 댓글입니다</p></div>
                                 <!-- 댓글 날짜 -->
                                 <div class="comment-written-at"><span class="date-time" th:text="${boardComment.getRegister_date()}"></span></div>
@@ -180,6 +182,7 @@
         var pages = getParameterByName("page");
         var clickCommentCno;
         var likecheck = "[[${boardlike}]]";
+        var toNickname;
         
         if(pages == ""){
             pages=0;
@@ -265,17 +268,30 @@
             }
 
             ccno = (part == "") ? 0 : clickCommentCno;
+            
+            var data;
+            if(part == "") {
+            	data = { "bno" : boardNumber, 
+            			"ccno" : ccno,
+            			"sid" : sid,
+            			"nickname" : nickname,
+            			"content" : content.val()
+            	};
+            }
+            else {
+            	data = { "bno" : boardNumber,
+            			"ccno" : ccno,
+            			"sid" : sid,
+            			"nickname" : nickname,
+            			"content" : content.val(),
+            			"tonickname" : toNickname
+            	};
+            }
 
             $.ajax({
                 type: "POST",
                 url : "/yu/boardComment/insertBoardComment",
-                data : {
-                    bno : boardNumber,
-                    ccno : ccno,
-                    sid : sid,
-                    nickname : nickname,
-                    content : content.val(),
-                },
+                data : data,
                 success : function(data){
                     if(data == true) {
                         alert("댓글 등록 성공");
@@ -321,6 +337,7 @@
             clickCommentCno = cno;
             var liId = "bc" + cno;
             var toNick = $("#"+ liId +" #divCommentWriter #spanCommentWriter").text();
+            toNickname = toNick;
             
             $("#toComment").html("To. " + toNick);
             $("#cTextArea").attr("placeholder", "대댓글을 입력하세요");
