--- a/src/main/resources/templates/board/boardUpdate.html
+++ b/src/main/resources/templates/board/boardUpdate.html
@@ -7,7 +7,7 @@
 
 <th:block layout:fragment="article">
     <div class="col-sm-auto article-header">
-        <h2>게시글 등록</h2>
+        <h2>게시글 수정</h2>
       </div>
       <br>
       <!-- 게시판 향후 수정 -->
