--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -10,6 +10,8 @@
 		<div id="article-container">
 			<header>
 				<div class="col-sm-auto clear article-head">
+						<!--  게시판 타입  -->
+						<h5 class="title" style="font-size:10pt" th:text="${board.getBoardtype()}"></h5>
                         <!-- 글 제목 -->
                         <h3 class="title">
                             <span th:text="${board.getTitle()}"></span>
