--- a/src/main/resources/templates/board/boardView.html
+++ b/src/main/resources/templates/board/boardView.html
@@ -157,7 +157,7 @@
                     </div>
                     <!-- 댓글 입력버튼 -->
                     <div class="comment-button clear">
-                        <div class="fr;">
+                        <div class="fr">
                         	<button id="commentCancel" type="button" class="btn-blue" style="display:none" onClick="cancelCommentForm('');">취소</button>
                           	<button id="commentRegisterButton" type="button" class="btn-blue" onClick="return registerComment('');">등록</button>
                         </div>
