--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -39,7 +39,7 @@
               				<img src="images/증명사진.jpg" style="width:25%;">
               				<div style="color: white">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               				<button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
-              				<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/logout'">로그아웃</button>
+              				<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
             			</form>
           			</li>
    				</ul>
@@ -74,7 +74,7 @@
               		<img src="images/증명사진.jpg" style="width:25%;">
               		<div style="color:black">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               		<button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
-              		<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/logout'">로그아웃</button>
+              		<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
             	</form>
   			</div>
 		</div>
