--- a/src/main/resources/templates/errors/errorPage.html
+++ b/src/main/resources/templates/errors/errorPage.html
@@ -8,7 +8,7 @@
 	<div style ="text-align:center; margin-top:20%">
 		요청하신 페이지를 찾을 수 없거나 오류가 발생했습니다.<br><br>
 		<a style="cursor:pointer; text-decoration:underline; color:#FF4848" onClick = "history.go(-1)">뒤로가기</a>&nbsp;&nbsp;
-		<a th:if="${studentInfo} != null" style="cursor:pointer; text-decoration:underline; color:#65D35D" onClick="location.href='/logout'">로그아웃</a>
+		<a th:if="${studentInfo} != null" style="cursor:pointer; text-decoration:underline; color:#65D35D" onClick="location.href='/yu/logout'">로그아웃</a>
 	</div>
 	<br>
 	<div style ="text-align:center; margin-top:10px">
